--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@
         SERVICE_TAGS: dev
       working_dir: /var/www/html
       volumes:
-        - ./vannak1.jr:/var/www/html
+        - ./vannak.jr:/var/www/html
         - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
       networks:
         - laravel
